--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portofolio website</title>
-    <link rel="stylesheet" href="/reset.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Spline+Sans:wght@300..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
-        <img src="/T.svg" alt="logo saya">
+        <img src="T.svg" alt="logo saya">
         <ul class="menu">
            <li><a href="">studio</a></li>
            <li><a href="">Services</a></li>
@@ -31,7 +31,7 @@
                 [sekolah developer indonesia] terima kasih atas perhatiannya<p>
                 <button class="btn primary">Kunjungi saya</button>
             </div>
-            <img  src="/733d9fd0044294fbd94746c2f81ea18e.jpg" alt="foto saya">
+            <img  src="733d9fd0044294fbd94746c2f81ea18e.jpg" alt="foto saya" class="">
         </section>
     </main>
 </section>
